Fixed angle brackets

--- a/css/block-and-inline/b-i.html
+++ b/css/block-and-inline/b-i.html
@@ -19,7 +19,7 @@
                     What is "normal flow"?.</li>
                 <li>"Block" vs "Inline" Elements.</li>
                 <li>Which elements default to "block" and which ones default to "inline".</li>
-                <li>What is <code>&ltdiv&gt</code> and what is <code>&ltspans&gt?</code></li>
+                <li>What is <code>&lt;div&gt;</code> and what is <code>&lt;spans&gt;?</code></li>
             </ul>
         </p>
 
@@ -34,7 +34,7 @@
         </p>
         <p>
             On the contrary, inline elements do not create a new line, but appear in line with the elements they are 
-            placed next to. A good example would be a link (from using the <code>&lta&gt</code> tags) that is part of a 
+            placed next to. A good example would be a link (from using the <code>&lt;a&gt;</code> tags) that is part of a 
             text content. For example:
         </p>
         <p>
