--- a/html/body-elements/body-elements.html
+++ b/html/body-elements/body-elements.html
@@ -11,10 +11,10 @@
         Body elements
     </h1>
     <p>
-        Create paragraph tags using &ltp&gt.
+        Create paragraph tags using &lt;p&gt;.
     </p>
     <p>
-        Use &ltstrong&gt To indicate words of importance, seriousness, and urgency without changing the meaning of the content.
+        Use &lt;strong&gt; To indicate words of importance, seriousness, and urgency without changing the meaning of the content.
         <ul>
             <li>
                 Except in emergencies,<strong>do not press the emergency button.</strong>
@@ -22,7 +22,7 @@
         </ul>
     </p>
     <p>
-        Use &ltem&gt in order to emphasize words that change the mean of the content.
+        Use &lt;em&gt; in order to emphasize words that change the mean of the content.
         <ul>
             <li>
                 A person could be tired because <em>he was up all night.</em>
@@ -30,14 +30,14 @@
         </ul>
     </p>        
     <p>
-        Use &lti&gt to change the mood or voice of words from surrounding content. Often used with foreign words, idiomatic phrases, technical terms, ship names, thoughts, etc.</p>
+        Use &lt;i&gt; to change the mood or voice of words from surrounding content. Often used with foreign words, idiomatic phrases, technical terms, ship names, thoughts, etc.</p>
         <ul>
             <li>
                 Even when we do have fun, people are become... <i>over rambunctious.</i>
             </li>
         </ul>
     <p>
-        Use &ltb&gt to bring attention to words without indicating importance, serious, or urgency.
+        Use &lt;b&gt; to bring attention to words without indicating importance, serious, or urgency.
         <ul>
             <li>
                 If I have what I wanted, I thought I'd be happy. Now... I want <b>more.</b>
@@ -45,10 +45,10 @@
         </ul>
     </p>
     <p>
-        &lt!-- --&gt creates hidden comments in the line not visible to users.
+        &lt;!-- --&gt; creates hidden comments in the line not visible to users.
         <!-- Like so.-->
     <p>
-        In order semantics (standards), from most to least important, goes as &ltstrong&gt, &ltem&gt, &lti&gt, and lastly &ltb&gt.</p>
+        In order semantics (standards), from most to least important, goes as &lt;strong&gt;, &lt;em&gt;, &lt;i&gt;, and lastly &lt;b&gt;.</p>
     <a href="../lists/lists.html" target="_self" rel="noopener noreferrer">Next Lesson: Lists</a>
     <br>
     <a href="../html.html" target="_self" rel="noopener noreferrer">Back to HTML</a>
