--- a/html/boilerplate/boilerplate.html
+++ b/html/boilerplate/boilerplate.html
@@ -11,10 +11,10 @@
         Boilerplate
     </h1>
     <p>
-        &lt!DOCTYPE&gt tags must be used to indicate HTML version.
+        &lt;!DOCTYPE&gt; tags must be used to indicate HTML version.
     </p>
     <p>
-        &lthtml&gt tags indicate the start of the html document. Known as the root.
+        &lt;html&gt; tags indicate the start of the html document. Known as the root.
     </p>
         <ul>
             <li>
@@ -22,19 +22,19 @@
             </li>
         </ul>
     <p>
-        &lthead&gt tags are used to provide instructions for the boilerplate.
+        &lt;head&gt; tags are used to provide instructions for the boilerplate.
     </p>
     <p>
-        &ltmeta charset="UTF-8"&gt sets encoding ensures special symbols and characters from different languages correctly in the browser.
+        &lt;meta charset="UTF-8"&gt; sets encoding ensures special symbols and characters from different languages correctly in the browser.
     </p>
     <p>
-        &lttitle&gt provides the boilerplate context of the webpage with a title.
+        &lt;title&gt; provides the boilerplate context of the webpage with a title.
     </p>
     <p>
-        &ltbody&gt provides html document with content.
+        &lt;body&gt; provides html document with content.
     </p>
     <p>
-        &lth1&gt provides a heading to the document. Ranges from h1 to h6, from biggest to smallest respectively.
+        &lt;h1&gt; provides a heading to the document. Ranges from h1 to h6, from biggest to smallest respectively.
     </p>
     <a href="../body-elements/body-elements.html" target="_self" rel="noopener noreferrer">Next Lesson: Body Elements</a>
     <br>
