--- a/html/links-and-images/l-a-i.html
+++ b/html/links-and-images/l-a-i.html
@@ -10,7 +10,7 @@
     <h1>Links and Images</h1>
     <h2>Links</h2>
     <p>
-        Use &lta&gt, an anchor tag, to create links.
+        Use &lt;a&gt;, an anchor tag, to create links.
     </p>
     <ul>
         There are:
@@ -43,10 +43,10 @@
     </p>
     <h2>Images</h2>
     <p>
-        When bringing in images onto a webpage, use &ltimg&gt tag.
+        When bringing in images onto a webpage, use &lt;img&gt; tag.
     </p>
     <p>
-        &ltimg&gt tags are void elements, so a closing tag is not necessary.
+        &lt;img&gt; tags are void elements, so a closing tag is not necessary.
     </p>
     <p>
         However, just like anchor tags, they do have a destination attribute similar to href. For images, src is used.
