--- a/html/lists/lists.html
+++ b/html/lists/lists.html
@@ -9,7 +9,7 @@
 <body>
     <h1>Lists</h1>
     <p>
-        &ltul&gt creates unordered lists. Used for things like getting groceries, when order is not a neccessity.
+        &lt;ul&gt; creates unordered lists. Used for things like getting groceries, when order is not a neccessity.
     </p>
     <ul>
         Groceries            
@@ -24,7 +24,7 @@
         </li>
     </ul>
     <p>
-        &ltol&gt creates ordered. Used for things like directions in a recipe.
+        &lt;ol&gt; creates ordered. Used for things like directions in a recipe.
     </p>
     <ol>
         Recipe
@@ -42,7 +42,7 @@
             </li>
     </ol>
     <p>
-        &ltli&gt is used in both ordered and unordered lists to create listed items.
+        &lt;li&gt; is used in both ordered and unordered lists to create listed items.
     </p>
     <a href="../links-and-images/l-a-i.html">Next Lesson: Links and Images</a>
     <br>
