Fixed link in i-t-f, notes on g-a-s

--- a/flexbox/intro/i-t-f.html
+++ b/flexbox/intro/i-t-f.html
@@ -74,9 +74,10 @@
                 </pre>                
             </p>
             <p>
-                In the example, when you remove the comments tags in the CSS declarations (&#47;&#42; and &#42;&#47;),
-                you set all three &lt;div&gt;s to be arranged horizontally. When hitting the 1x, 0.5x, 0.25x magnifiers,
-                the spacing between all three are equal even when zoomed out. This is how they 'flex'.
+                In the example, when you remove the comments tags in the CSS declarations (&#47;&#42; and &#42;&#47;)
+                surrounding <code>display: flex;</code> and <code>flex: 1;</code>, you set all three &lt;div&gt;s to 
+                be arranged horizontally. When hitting the 1x, 0.5x, 0.25x magnifiers, the &lt;div&gt;s take up all the 
+                available space, and spacing between all three are equal even when zoomed out. This is how they 'flex'.
             </p>
             <p>
                 If you add another &lt;div&gt; to the HTML, you will get four &lt;div&gt; tags spread evenly.
@@ -141,7 +142,7 @@
                     property.
                 </p>
             <br>
-            <a href="../" target="_self" rel="noopener noreferrer">Next Lesson: Growing and Shrinking</a>
+            <a href="../growing-and-shrinking/g-a-s.html" target="_self" rel="noopener noreferrer">Next Lesson: Growing and Shrinking</a>
             <br>
             <a href="../flexbox.html" target="_self" rel="noopener noreferrer">Back to Flexbox</a>
         </body>
