--- a/flexbox/intro/i-t-f.html
+++ b/flexbox/intro/i-t-f.html
@@ -117,7 +117,8 @@
             </p>
             <br>
             <p>
-                <ul>Summary
+                <ul>
+                    Summary
                     <li>
                         A child element can only be a "flex item" if, and only if, the parent has the property "display: flex" 
                         and the child element is a directly descending element to the parent (one level).
